@@ -4,6 +4,16 @@ pipeline{
         maven 'Maven3'
         jdk 'Java17'
     }
+    environment {
+        MAVEN_OPTS = '-Xmx1024m -XX:MaxPermSize=256m'
+        APPLOCATION_NAME = "registration-app-aws"
+        APPLOCATION_VERSION = "1.0.0"
+        DOCKER_USER = "speedskillsx"
+        DOCKER_PASS= "jenkins-docker-token"
+
+        DOCKER_IMAGE = "${DOCKER_USER}/${APPLOCATION_NAME}"
+        DOCKER_TAG = "${APPLOCATION_VERSION}-${BUILD_NUMBER}"
+    }
     stages{
         stage("Clean Workspace") {
             steps {
@@ -44,6 +54,21 @@ pipeline{
                 script {
                     timeout(time: 10, unit: 'MINUTES') {
                         waitForQualityGate abortPipeline: false, credentialsId: 'jenkins-sonarqube-token'
+                    }
+                }
+            }
+        }
+
+        stage("Build & Push a Docker Image") {
+            steps {
+                script {
+                    docker.withRegistry(, "${DOCKER_PASS}") {
+                        def app = docker.build("${DOCKER_IMAGE}")
+                    }
+
+                    docker.withRegistry(, "${DOCKER_PASS}") {
+                        docker.push("${DOCKER_TAG}")
+                        docker.push("latest")    
                     }
                 }
             }
